force-app/main/default/objects/OA_Communication_Preference_Audit__c/OA_Communication_Preference_Audit__c.object-meta.xml
<CustomObject>
    <description>Append-only audit record for communication preference events.</description>
    <label>OA Communication Preference Audit</label>
    <nameField>
        <displayFormat>CPA-{000000}</displayFormat>
        <label>Communication Preference Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OA Communication Preference Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>