force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign context for this preference event.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Communication Preference Audits</relationshipLabel>
    <relationshipName>OA_Comm_Preference_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>