force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email snapshot for this audit event.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>