force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of preference event recorded.</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Unsubscribe Requested</fullName><default>true</default><label>Unsubscribe Requested</label></value>
            <value><fullName>Already Unsubscribed</fullName><default>false</default><label>Already Unsubscribed</label></value>
            <value><fullName>Invalid Token</fullName><default>false</default><label>Invalid Token</label></value>
            <value><fullName>Expired Token</fullName><default>false</default><label>Expired Token</label></value>
            <value><fullName>Revoked Token</fullName><default>false</default><label>Revoked Token</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>