force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead affected by this preference event.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Communication Preference Audits</relationshipLabel>
    <relationshipName>OA_Comm_Preference_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>