force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Human-readable processing message or error summary.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>