force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/New_CampaignMember_Status__c.field-meta.xml
<CustomField>
    <fullName>New_CampaignMember_Status__c</fullName>
    <description>CampaignMember status after processing this event.</description>
    <label>New Campaign Member Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>