force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/New_Lead_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>New_Lead_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead.HasOptedOutOfEmail value after processing this event.</description>
    <label>New Lead Opt Out</label>
    <type>Checkbox</type>
</CustomField>