force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Normalized_Email__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Email__c</fullName>
    <description>Lowercase trimmed email snapshot for this audit event.</description>
    <label>Normalized Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>