force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <description>Date and time when this audit event occurred.</description>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>