force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Preference record affected by this audit event, when available.</description>
    <label>Preference</label>
    <referenceTo>OA_Communication_Preference__c</referenceTo>
    <relationshipLabel>Audit Events</relationshipLabel>
    <relationshipName>Audit_Events</relationshipName>
    <type>Lookup</type>
</CustomField>