force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Prior_CampaignMember_Status__c.field-meta.xml
<CustomField>
    <fullName>Prior_CampaignMember_Status__c</fullName>
    <description>CampaignMember status before processing this event.</description>
    <label>Prior Campaign Member Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>