force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Prior_Lead_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Prior_Lead_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead.HasOptedOutOfEmail value before processing this event.</description>
    <label>Prior Lead Opt Out</label>
    <type>Checkbox</type>
</CustomField>