force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Request_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Request_Metadata__c</fullName>
    <description>Request metadata captured by the caller, such as user agent or source context.</description>
    <label>Request Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>