force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Processing result for this preference event.</description>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Success</fullName><default>true</default><label>Success</label></value>
            <value><fullName>No Change</fullName><default>false</default><label>No Change</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>