force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source that caused this audit event.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HTTPS Link</fullName>
                <default>true</default>
                <label>HTTPS Link</label>
            </value>
            <value>
                <fullName>Mailto Reply</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>