force-app/main/default/objects/OA_Communication_Preference_Audit__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Token used by this request, when a token could be resolved.</description>
    <label>Token</label>
    <referenceTo>OA_Communication_Preference_Token__c</referenceTo>
    <relationshipLabel>Audit Events</relationshipLabel>
    <relationshipName>Audit_Events</relationshipName>
    <type>Lookup</type>
</CustomField>